diesel_compile_tests/tests/fail/derive/belongs_to_missing_parent_import.stderr
error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/belongs_to_missing_parent_import.rs:12:21
   |
12 | #[diesel(belongs_to(Bar))]
   |                     ^^^ not found in this scope
